--- a/config.json
+++ b/config.json
@@ -1,94 +1,93 @@
 {
     "Siti": {
-           "StreamingCommunity": {
-               "url": "https://streamingcommunity.paris",
-               "SC_ForwardProxy": "0",
-               "SC_PROXY": "0",
-               "VX_ForwardProxy": "0",
-               "VX_PROXY": "0",
-               "enabled": "1"
-           },
-           "Filmpertutti": {
-               "url": "https://filmpertutti.motorcycles",
-               "enabled": "1"
-           },
-           "Tantifilm":{
-               "url": "https://www.tanti.bond",
-               "TF_ForwardProxy": "0",
-               "TF_PROXY": "0",
-               "enabled": "1"
-           },
-           "Mysterius":{
-               "enabled": "0"    
-           },
-          "LordChannel":{
-               "url":"https://lordchannel.net",
-               "enabled":"1"
-          },
-          "StreamingWatch":{
-              "url":"https://www.streamingwatch.org",
-              "enabled":"1"
-          },
-          "CB01":{
-              "url":"https://cb01new.loan",
-              "CB_PROXY":"0",
-              "CB_ForwardProxy":"0",
-              "MX_ForwardProxy":"0",
-              "MX_PROXY":"0",
-              "enabled":"1"
-          },
-          "DDLStream":{
-              "url":"https://ddlstreamitaly.co",
-              "cookies" : {
-                  "ips4_device_key": null,
-                  "ips4_IPSSessionFront": null,
-                  "ips4_member_id": null,
-                  "ips4_login_key": null
-                  },
-              "enabled":"1"
-          },
-          "Guardaserie":{
-              "url":"https://guardaserietv.mom",
-              "enabled":"1",
-              "GS_ForwardProxy":"0",
-              "GS_PROXY":"0"
-          },
-          "GuardaHD":{
-              "url":"https://mostraguarda.stream",
-              "enabled":"1",
-              "GH_ForwardProxy":"0",
-              "GH_PROXY":"0"
-          },
-          "Onlineserietv":{
-              "domain":"com",
-              "enabled":"1",
-              "OST_ForwardProxy":"0",
-              "OST_PROXY":"0"
-          },
-          "AnimeWorld":{
-              "url":"https://www.animeworld.so",
-              "enabled":"1",
-              "AW_ForwardProxy":"0",
-              "AW_PROXY":"0"
-          },
-          "SkyStreaming":{
-              "url":"https://skystreaming.watch",
-              "enabled":"1"
-          },
-          "DaddyLiveHD":{
-              "url":"https://daddylive.mp",
-              "enabled":"1"
-          }
-   },
-   "General":{
-       "load_env": "0",
-       "HOST": "0.0.0.0",
-       "PORT": "8080",
-       "Name": "MammaMia",
-       "Icon": "🍕️",
-       "Public_Instance": "0",
-       "Remote_Instance": "1",
-       "Global_Proxy": "0"
-       }
-  }
-  
+        "StreamingCommunity": {
+            "url": "https://streamingcommunity.garden",
+            "SC_ForwardProxy": "0",
+            "SC_PROXY": "0",
+            "VX_ForwardProxy": "0",
+            "VX_PROXY": "0",
+            "enabled": "1"
+        },
+        "Filmpertutti": {
+            "url": "https://filmpertutti.motorcycles",
+            "enabled": "1"
+        },
+        "Tantifilm": {
+            "url": "https://www.tanti.bond",
+            "TF_ForwardProxy": "0",
+            "TF_PROXY": "1",
+            "enabled": "1"
+        },
+        "Mysterius": {
+            "enabled": "0"
+        },
+        "LordChannel": {
+            "url": "https://lordchannel.net",
+            "enabled": "1"
+        },
+        "StreamingWatch": {
+            "url": "https://www.streamingwatch.org",
+            "enabled": "1"
+        },
+        "CB01": {
+            "url": "https://cb01net.com",
+            "CB_PROXY": "1",
+            "CB_ForwardProxy": "0",
+            "MX_ForwardProxy": "0",
+            "MX_PROXY": "0",
+            "enabled": "1"
+        },
+        "DDLStream": {
+            "url": "https://ddlstreamitaly.co",
+            "cookies": {
+                "ips4_device_key": "e76de2d09214c678fa18e317e1aab74b",
+                "ips4_IPSSessionFront": "a43ab7f014e10d61c58412c436b2018b",
+                "ips4_member_id": "4030150",
+                "ips4_login_key": "5cb83aeddd61ee9dc9d8727726cabc94"
+            },
+            "enabled": "1"
+        },
+        "Guardaserie": {
+            "url": "https://guardaserietv.top",
+            "enabled": "1",
+            "GS_ForwardProxy": "0",
+            "GS_PROXY": "1"
+        },
+        "GuardaHD": {
+            "url": "https://guardahd.stream",
+            "enabled": "1",
+            "GH_ForwardProxy": "0",
+            "GH_PROXY": "1"
+        },
+        "Onlineserietv": {
+            "domain": "com",
+            "enabled": "1",
+            "OST_ForwardProxy": "0",
+            "OST_PROXY": "0"
+        },
+        "AnimeWorld": {
+            "url": "https://www.animeworld.ac",
+            "enabled": "1",
+            "AW_ForwardProxy": "0",
+            "AW_PROXY": "1"
+        },
+        "SkyStreaming": {
+            "url": "https://skystreaming.download",
+            "enabled": "1"
+        },
+        "DaddyLiveHD": {
+            "url": "https://daddylive.mp",
+            "enabled": "1"
+        }
+    },
+    "General": {
+        "load_env": "0",
+        "HOST": "0.0.0.0",
+        "PORT": "8080",
+        "Name": "MammAnna",
+        "Icon": "🍕️",
+        "Public_Instance": "0",
+        "Remote_Instance": "1",
+        "Global_Proxy": "0"
+    }
+}
